<resources>
    <string name="app_name">ABBApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_content">ImageContent</string>
    <string name="species">Species</string>
    <string name="status">Status</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="character">Character</string>
    <string name="filter">Filter</string>
</resources>